attempting to convert from sqllite to mysql

--- a/practice/todo.html
+++ b/practice/todo.html
@@ -1,9 +1,10 @@
-<!
-<html>
+
+<html xmlns="http://www.w3.org/1999/html" xmlns="http://www.w3.org/1999/html">
+
 <head>
-    <script src="js/jquery-2.1.4.min.js"></script>
-    <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="bootstrap/css/bootstrap-theme.min.css" />
+    <script src="../web/js/jquery-2.1.4.min.js"></script>
+    <link rel="stylesheet" href="../web/bootstrap/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="../web/bootstrap/css/bootstrap-theme.min.css" />
     <title>ToDo</title>
 </head>
 <body>
@@ -18,7 +19,7 @@
     </span>
     <span class="form_field">
         <label>Due date:
-            <input type="date">
+            <input id="date" name="date" type="date">
         </label>
     </span>
     <span class="form_field">
